--- a/traffic.html
+++ b/traffic.html
@@ -191,9 +191,9 @@
               <div class="col-sm-6">
                 <div class="product__img-" style="background-color:#fff">
 
-                  <a class="popup-gallery-item" href="c:\Users\USER\Desktop\g\images\R (3).jpg">
+                  <a class="popup-gallery-item" href="r/R (3).jpg">
 
-                    <img src="c:\Users\USER\Desktop\g\images\R (3).jpg" class="zoomin"
+                    <img src="r/R (3).jpg" class="zoomin"
                       alt="product" loading="lazy" width="100%">
                   </a>
 
@@ -201,38 +201,38 @@
 
                 <div class="row">
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="c:\Users\USER\Desktop\g\images\R (3).jpg">
-                      <img class="border" src="c:\Users\USER\Desktop\g\images\R (3).jpg"
+                    <a class="popup-gallery-item" href="r/R (3).jpg">
+                      <img class="border" src="r/R (3).jpg"
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="c:\Users\USER\Desktop\g\images\R (3).jpg">
-                      <img class="border" src="c:\Users\USER\Desktop\g\images\R (3).jpg"
+                    <a class="popup-gallery-item" href="r/R (3).jpg">
+                      <img class="border" src="r/R (3).jpg"
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="c:\Users\USER\Desktop\g\images\road-traffic-light-solar-panel-powered-electricity-generated-75342867.webp">
-                      <img class="border" src="c:\Users\USER\Desktop\g\images\road-traffic-light-solar-panel-powered-electricity-generated-75342867.webp "
+                    <a class="popup-gallery-item" href="r/road-traffic-light-solar-panel-powered-electricity-generated-75342867.webp">
+                      <img class="border" src="r/road-traffic-light-solar-panel-powered-electricity-generated-75342867.webp "
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="c:\Users\USER\Desktop\g\images\OIP (6).jpg">
-                      <img class="border" src="c:\Users\USER\Desktop\g\images\OIP (6).jpg"
+                    <a class="popup-gallery-item" href="r/OIP (6).jpg">
+                      <img class="border" src="r/OIP (6).jpg"
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="c:\Users\USER\Desktop\g\images\OIP (7).jpg">
-                      <img class="border" src="c:\Users\USER\Desktop\g\images\OIP (7).jpg"
+                    <a class="popup-gallery-item" href="r/OIP (7).jpg">
+                      <img class="border" src="r/OIP (7).jpg"
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="c:\Users\USER\Desktop\g\images\OIP (8).jpg">
-                      <img class="border" src="c:\Users\USER\Desktop\g\images\OIP (8).jpg"
+                    <a class="popup-gallery-item" href="r/OIP (8).jpg">
+                      <img class="border" src="r/OIP (8).jpg"
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
@@ -289,10 +289,10 @@
 
    
                 <div class="col-sm-6 col-md-6 col-lg-3">
-          <a href="c:\Users\USER\Desktop\g\traffic.html">
+          <a href="r/.html">
             <div class="product-item">
               <div class="product__img">
-                              <img src="c:\Users\USER\Desktop\g\images\R (3).jpg" alt="Product" loading="lazy">
+                              <img src="r/R (3).jpg" alt="Product" loading="lazy">
                 <div class="product__action">
                   
                 </div><!-- /.product-action -->
