--- a/traffic.html
+++ b/traffic.html
@@ -213,8 +213,8 @@
                     </a>
                   </div>
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="r/road-traffic-light-solar-panel-powered-electricity-generated-75342867.webp">
-                      <img class="border" src="r/road-traffic-light-solar-panel-powered-electricity-generated-75342867.webp "
+                    <a class="popup-gallery-item" href="r/bR.jpg">
+                      <img class="border" src="r/bR.jpg"
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
