--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-  <div class="wrapper"> &nbsp;    &nbsp;
+  <div class="wrapper">
     
-   <div class="preloader"><br> &nbsp;    &nbsp;
-    <h2 style="color: #2db34b;">  GR&#9728CEMAC     &nbsp;    &nbsp;</h2>
+   <div class="preloader"><br> &nbsp;
+    <h2 style="color: #2db34b;">  GR&#9728CEMAC  &nbsp;</h2>
   <div class="loading"><span></span><span></span><span></span><span></span></div>
 </div><!-- /.preloader -->
 
