--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
 
 
 
-<br><br>            <div class="" style=" padding: 0px 10px;">
+<br><br>            <div class="" style=" padding: 0px 10px; background-image: url(images/footebr.jpg);">
   <h6 class="footer-widget-title" style="font-size: 1.9rem; margin-top: 8px; color: #2db34b;">Reach us</h6>
 
   <div class="footer-widget-content" style="margin-top: 10px;">
