--- a/panel3.html
+++ b/panel3.html
@@ -194,9 +194,9 @@
               <div class="col-sm-6">
                 <div class="product__img-" style="background-color:#fff">
 
-                  <a class="popup-gallery-item" href="images/sol2.jpg">
+                  <a class="popup-gallery-item" href="e/sol2.jpg">
 
-                    <img src="images/sol2.jpg" class="zoomin"
+                    <img src="e/sol2.jpg" class="zoomin"
                       alt="product" loading="lazy" width="100%">
                   </a>
 
@@ -222,8 +222,8 @@
                     </a>
                   </div>
                   <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="images/sol2.jpg">
-                      <img class="border" src="images/sol2.jpg"
+                    <a class="popup-gallery-item" href="e/sol2.jpg">
+                      <img class="border" src="e/sol2.jpg"
                         class="zoomin" alt="product" loading="lazy" width="100%">
                     </a>
                   </div>
@@ -278,7 +278,7 @@
           <a href="panel3.html">
             <div class="product-item">
               <div class="product__img">
-                              <img src="images/sol2.jpg" alt="Product" loading="lazy">
+                              <img src="e/sol2.jpg" alt="Product" loading="lazy">
                 <div class="product__action">
                   
                 </div><!-- /.product-action -->
