--- a/pdf.html
+++ b/pdf.html
@@ -175,7 +175,7 @@
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="images/sol2.jpg" alt="">
+                    <img src="e/sol2.jpg" alt="">
                 </div>
             </div>
 
