--- a/products.html
+++ b/products.html
@@ -364,7 +364,7 @@
                 <a href="panel3.html">
                   <div class="product-item">
                     <div class="product__img">
-                      <img src="images/sol2.jpg" width="100%" height="320px" alt="Product" loading="lazy">
+                      <img src="e/sol2.jpg" width="100%" height="320px" alt="Product" loading="lazy">
                       <div class="product__action">
                         
                       </div><!-- /.product-action -->
