--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
     
     
               <li class="nav__item has-dropdown">
-                <a href="index.html" class="nav__item-link">Support</a>
+                <a class="nav__item-link">Support</a>
                 <button class="dropdown-toggle" data-toggle="dropdown"></button>
                 <ul class="dropdown-menu">
                   <li class="nav__item">
@@ -160,8 +160,8 @@
 
 
 
-<br><br>            <div class="" style=" padding: 0px 10px; background-image: url(images/footebr.jpg);">
-  <h6 class="footer-widget-title" style="font-size: 1.9rem; margin-top: 8px; color: #2db34b;">Reach us</h6>
+<br><br>            <div class="" style=" padding: 20px 30px; background-image: url(images/5.jpg);">
+  <h6 class="footer-widget-title" style="font-size: 1.9rem; margin-top: 14px;">Reach us</h6>
 
   <div class="footer-widget-content" style="margin-top: 10px;">
     <p class="mb-12">                  <a class="color-primary" style="font-size: 1.4rem;">Head Office: <br>Address 5, Ogun Street Off Allen Avenue Ikeja Lagos<br>+2348039341541<br> <br>
@@ -187,7 +187,7 @@
 
     <style>
         .contact-in{
-            width: 80%;
+            width: 100%;
             height: auto;
             margin: auto;
             display: flex;
