--- a/gen1.html
+++ b/gen1.html
@@ -135,7 +135,7 @@
   
   
             <li class="nav__item has-dropdown">
-              <a href="index.html" class="nav__item-link">Support</a>
+              <a class="nav__item-link">Support</a>
               <button class="dropdown-toggle" data-toggle="dropdown"></button>
               <ul class="dropdown-menu">
                 <li class="nav__item">
@@ -248,7 +248,9 @@
                 <h1 class="product__title">Solar Generator</h1>
 
                 <div class="product__desc"><p>GROCEMAC Solar Solar Generator</p>
-
+                  <p><li>2400 Wh / 1000 W power station: Super durable 2400 Wh power station with continuous 1000 W inverter with high load (1000 W <_ load < 1200 W at 120 S; 1200 W <_ load at 1 s), built-in in a first-class lithium polymer battery cell, safety and quality are guaranteed. We use automotive grade 3C high speed battery cells therefore have a much longer life cycle of more than 2500 times.</li></p>
+                <p><li>Multiple outputs for different requirements (2 x AC / 1 x cigarette lighter / 1 x PD 45 W type C /4 x USB): AC 220 V sockets for most household appliances up to 1000W such as TV, CPAP, drone. 12V9A car cigarette lighter for car powered devices such as mini fridge, car vacuum cleaner, 1 x QC PD 45W USB-C for laptop, MacBook Air / Pro & USB-C iPad, 4 x 5V 3A USB for phone, camera, fan. This portable solar power station provides sufficient power for outdoor and indoor use.</li></p>
+                  
             
                 </div><!-- /.product-desc -->
 
