--- a/gen2.html
+++ b/gen2.html
@@ -133,7 +133,7 @@
   
   
             <li class="nav__item has-dropdown">
-              <a href="index.html" class="nav__item-link">Support</a>
+              <a class="nav__item-link">Support</a>
               <button class="dropdown-toggle" data-toggle="dropdown"></button>
               <ul class="dropdown-menu">
                 <li class="nav__item">
@@ -235,7 +235,9 @@
 
                 <div class="product__desc"><p>GROCEMAC Solar Generator</p>
 
-            
+            <p><li>Small but powerful: with a 600 W converter, a 268 Wh LiFePO4 battery pack and 8 sockets, this power station ensures that your most important devices are powered on the go or in the event of a power outage at home</li></p>
+            <p><li>Ultra-fast charging: on bulky power brick, a single cable is enough to charge EB3A with a maximum of 350 W. You can also use PV+AC together to charge 80% in just 30 minutes (solar charging cable not included).</li></p>
+            <p><li>From sunlight to electricity: the built-in MPPT controller supports up to 200 W solar input power, so you can build an ideal solar generator with the BLUETTI PV120/PV200.</li></p>
                 </div><!-- /.product-desc -->
 
                 <!-- <div class="product__meta-details">
