--- a/pdf.html
+++ b/pdf.html
@@ -129,7 +129,7 @@
     
     
               <li class="nav__item has-dropdown">
-                <a href="index.html" class="nav__item-link">Support</a>
+                <a class="nav__item-link">Support</a>
                 <button class="dropdown-toggle" data-toggle="dropdown"></button>
                 <ul class="dropdown-menu">
                   <li class="nav__item">
