--- a/panel3.html
+++ b/panel3.html
@@ -134,7 +134,7 @@
   
   
             <li class="nav__item has-dropdown">
-              <a href="index.html" class="nav__item-link">Support</a>
+              <a class="nav__item-link">Support</a>
               <button class="dropdown-toggle" data-toggle="dropdown"></button>
               <ul class="dropdown-menu">
                 <li class="nav__item">
@@ -203,18 +203,6 @@
                 </div><!-- /.product-img -->
 
                 <div class="row">
-                  <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="images/thin.jpg">
-                      <img class="border" src="images/thin.jpg"
-                        class="zoomin" alt="product" loading="lazy" width="100%">
-                    </a>
-                  </div>
-                  <div class="col-sm-2">
-                    <a class="popup-gallery-item" href="images/R (6).jpg">
-                      <img class="border" src="images/R (6).jpg"
-                        class="zoomin" alt="product" loading="lazy" width="100%">
-                    </a>
-                  </div>
                   <div class="col-sm-2">
                     <a class="popup-gallery-item" href="images/OIP (19).jpg">
                       <img class="border" src="images/OIP (19).jpg"
