--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
       <nav class="navbar navbar-expand-lg sticky-navbar">
         <div class="container-fluid">
             <a class="navbar-brand" style="font-size: 2.8rem; color: #2db34b;">
-              GR&#9728MAC
+              GR&#9728CEMAC
             </a>
           </a>
           <button class="navbar-toggler" type="button">
