--- a/products.html
+++ b/products.html
@@ -162,7 +162,7 @@
         Slider
     ============================== -->
     <section class="page-title page-title-layout1 bg-overlay bg-overlay-2 bg-parallax text-center">
-      <div class="bg-img"><img src="images/main.jpg" alt="background"></div>
+      <div class="bg-img"><img src="e/hgb.jpg" alt="background"></div>
       <div class="container">
         <div class="row">
           <div class="col-12">
