--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div><!-- /.slide-item -->
         
         <div class="slide-item align-v-h bg-overlay bg-overlay-2">
-          <div class="bg-img"><img src="images/main.jpg" alt="slide img"></div>
+          <div class="bg-img"><img src="e/hgb.jpg" alt="slide img"></div>
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8">
