--- a/sales.html
+++ b/sales.html
@@ -69,11 +69,6 @@
 
 
 
-
-
-
-
-
   <nav class="navbar navbar-expand-lg sticky-navbar">
     <div class="container-fluid">
         <a class="navbar-brand" style="font-size: 2.8rem; color: #2db34b;">
@@ -160,7 +155,7 @@
        page title 
     =========================== -->
     <section class="page-title page-title-layout1 bg-overlay bg-overlay-2 bg-parallax text-center">
-    <div class="bg-img"><img src="images/main.jpg" alt="background"></div>
+    <div class="bg-img"><img src="e/hgb.jpg" alt="background"></div>
       <div class="container">
         <div class="row">
           <div class="col-12">
